--- a/style.css
+++ b/style.css
@@ -493,203 +493,70 @@ html{
 
 /* Projects Section  */
 
-.project-container{
-    text-transform: uppercase;
-    font-size: 2rem;
-    letter-spacing: 3px;
+
+.projectBox ul{
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    margin: 2rem;
+    justify-content: space-evenly;
     align-items: center;
-    text-align: center;
 }
-.project-container h2{
+.projectBox ul li{
+        border: 2px solid #000;
+        width: 20rem;
+        height: 25rem;
+        list-style: none;
+        margin: 2rem;
+        padding: 2rem;
 
-    text-transform: uppercase;
-    font-size: 2rem;
-    letter-spacing: 3px;
-    margin-bottom: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
-
-}
-
-.project-p1{
-    display: block;
-    text-align: center;
-    color: #555;
-    font-size: 1.5rem;
-    font-weight: 500;
-    max-width: 65rem;
-    margin: auto;
-    line-height: 1.6;
+    }
     
-}
-.primary-project-control{
-    background: #ffffff ;
-    min-height: 100%;
-    position: relative;
-    max-width: 120rem;
-    margin: auto;
-    width: 92%;
-    transform: translateY(1rem);
-}
+.head h3{
+    text-align: center;
+    margin-top: 1rem;
+} 
 
-.projects-list{
-display: flex;
-flex-direction: column;
-position: relative;
-max-width: 120rem;
-margin: auto;
+.image img{
+    width: 100%;
+    height: 100%;
 
 }
-.project-preview {
-    display: block;
-    transform: translateX(19rem);
-}
-.project1{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10rem;
-    transform: translateY(4rem);
-}
-.project-intro{
-    display: block;
-    line-height: 1.9rem;
-    transform: translateY(2rem);
-    margin-right:15rem;
-    position: relative;
-    max-width: 120rem;
-    margin: auto;
-}
-.project-intro h1{
-    margin-bottom: 0.4rem;
-}
-.project-intro p{
-    font-size: 1.3rem;
-    font-weight: 500;
-}
-.project-preview img{
-    width: 29rem;
-    height: 14rem;
-    margin-top: 2rem;
+
+.Pcontent{
+    text-align: center;
+    margin-top: 1rem;
 }
 
-#btn3{
-    border: 2px solid #339b54;
-    background: #339b54;
-    color: #fff;
-    margin-top: 2rem;
+button{
+    padding-top: 0.4rem;
+    padding-bottom: 0.4rem;
+    padding-left: 0.8rem;
+    padding-right: 0.8rem;
+    text-align: center;
+    margin-top: 1rem;
+    margin-left: 4.5rem;
+    text-transform: uppercase;
 }
 
-#btn3:hover{
-    background: #fff;
-    color: #339b54;
-}
+
 
 @media only screen and (max-width:1476px) {
-    .projects-list{
-        flex-direction: row;
-       
-    }
-    .project1{
-        grid-template-rows: 1fr 1fr;
-        grid-template-columns: none;
-        grid-gap: 2rem;
-    }
-    .project-preview{
-        transform: translateX(0);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .project-intro img{
-        margin-right: 0;
-        width: 29rem;
-        height: 14rem;
-        margin-top: 2rem;
-   
-    }
-
- 
-    .project-intro h1{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-    }
-    .project-intro p{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 1rem;
-        text-align: center;
-    }
-    .buttons{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    
+  
 }
 @media only screen and (max-width:1521px) {
-    .project-preview img{
-        width: 28rem;
-        height: 14rem;
-        margin-top: 5rem;
-    }
+
 }
 @media only screen and (max-width:411px){
-    .project-preview  img{
-        margin-right: 0;
-        width: 24rem;
-        height: 13rem;
-        margin-top: 2rem;
-   
-    }
-    .project-p1{
-        font-size: 1.2rem;
-    }
+
 }
 @media only screen and (max-width:382px){
-    .project-preview img{
-        margin-right: 0;
-        width: 19rem;
-        height: 10rem;
-        margin-top: 2rem;
-    }
-    .project-intro p{
-       font-size: 1rem;
-    }
-
-    .project-p1{
-        font-size: 1rem;
-    }
+  
 }
 @media only screen and (max-width:305px){
-    .project-preview img{
-        margin-right: 0;
-        width: 18rem;
-        height: 9rem;
-        margin-top: 2rem;
-    }
-    .project-intro p{
-       font-size: 1rem;
-    }
+    
 }
 @media only screen and (max-width:295px){
-    .project-preview img{
-        margin-right: 0;
-        width: 16rem;
-        height: 8rem;
-        margin-top: 2rem;
-    }
-    .project-intro p{
-       font-size: 1rem;
-    }
-
+ 
  
 }
 
@@ -735,3 +602,298 @@ margin: auto;
 
 
 /* Contact Section  */
+
+
+
+.contact-container{
+    text-transform: uppercase;
+    font-size: 2rem;
+    letter-spacing: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.contact-container h2{
+
+    text-transform: uppercase;
+    font-size: 2rem;
+    letter-spacing: 3px;
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #339b54;
+
+
+}
+.contact-s{
+    background: #000000 ;
+    transform: translateY(9rem);
+    width: 100%;
+    height: 100vh;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.contact-p1{
+    display: block;
+    text-align: center;
+    color: #555;
+    font-size: 1.5rem;
+    font-weight: 500;
+    max-width: 65rem;
+    margin: auto;
+    line-height: 1.6;
+    margin-bottom: 2rem;
+
+}
+.primary-contact-control{
+    min-height: 100%;
+    max-width: 120rem;
+    margin: auto;
+    width: 92%;
+    z-index: 111111;
+    transform: translateY(5rem);
+
+}
+
+
+.contact-form{
+    max-width: 600px;
+    margin: auto;
+    padding: 0, 10px;
+}
+.contact-form-text{
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 16px 0;
+    border: 2px solid #339b54;
+    border-radius: 29px;
+    background: #000000;
+    padding: 20px 40px;
+    outline: none;
+    color: #ffff;
+}
+
+.contact-form-text:hover{
+    box-shadow:0px 0px 2px 0px rgb(41, 41, 41);
+
+}
+
+textarea.contact-form-text{
+    resize: none;
+    height: 120px;
+}
+
+.contact-form-btn{
+    float: right;
+    border: 2px solid #339b54;
+    background: #0000;
+    color: #339b54;
+    padding: 12px 50px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: 0.5s;
+    text-transform: uppercase;
+    font-size: 1rem;
+    letter-spacing: 5px;
+}
+
+.contact-form-btn:hover{
+    color: #fff;
+    background-color: #339b54;
+}
+
+
+
+.footer-section{
+    transform: translateY(9rem);
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    min-height: 100%;
+    flex-direction: column;
+    position: relative;
+
+}
+
+footer{
+    position: relative;
+    width: 100%;
+    height: auto;
+    padding: 50px 100px ;
+    background: #339b54;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap; 
+    font-weight: 600;
+}
+
+.fullfoot{
+}
+
+footer .f-container{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+footer .f-container .sec{
+    margin-right : 30px;
+}
+
+footer .f-container .sec.aboutus {
+    width: 40%;
+}
+
+footer .f-container  h2{
+    position: fixed;
+
+    color: #000;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+footer .f-container h2:before{
+    content: " ";
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 50px;
+    height: 2px;
+    background: #ffff;
+
+}
+
+.aboutContent{
+    padding-top: 3rem;
+}
+
+footer p{
+    color: #000;
+    padding-top: 0.1rem;
+}
+
+.sci{
+    margin-top: 20px;
+    display: flex;
+}
+
+.sci li{
+    list-style: none;
+}
+
+.sci li a{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background: #222;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+.sci li a:hover{
+    background: #339b54;
+
+}
+
+.fa{
+    color: #fff;
+    font-size: 20px;
+}
+
+.quicklinks{
+    position: relative;
+    width: 25%;
+}
+
+.quicklinks ul{
+   padding-top: 3rem;
+}
+
+.quicklinks ul li{
+    list-style: none; 
+}
+
+.quicklinks ul li a{
+    color: #000;
+    text-decoration: none;
+    margin-bottom: 10px;
+    display: inline-block;
+}
+
+.quicklinks ul li a:hover{
+    color: #fff;
+}
+
+.contact{
+    width: calc(35% - 60px);
+    margin-right: 0 !important;
+}
+.contact .info{
+     margin-left:-11px;
+     padding-top: 3rem;
+}
+.contact .info li{
+    display: flex;
+    margin-bottom: 16px;
+}
+
+.contact .info li span:nth-child(1){
+    color: #000;
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+
+
+.contact .info li a{
+    
+    color: #0000;
+    text-decoration: none;
+}
+
+.contact .info li a:hover{
+    color: #000;
+}
+
+.copyrightText{
+    width: 100%;
+    background: #339b54;
+    display: block;
+    padding:8px 100px  ;
+    text-align: center;
+    color:#999 ;
+}
+
+.copy{
+    padding-top: 2rem;
+}
+
+@media(max-width:991px){
+    footer{
+        padding:40px;
+    }
+    footer .f-container{
+        flex-direction: column;
+    }
+    footer .f-container .sec{
+        margin-right: 0;
+        margin-bottom: 40px;
+    }
+    footer .f-container .sec.aboutus,
+    .quicklinks,
+    .contact{
+        width: 100%;
+    }
+    .copyrightText{
+        padding: 8px 40px;
+    }
+}
