--- a/style.css
+++ b/style.css
@@ -12,14 +12,117 @@ html{
 
 ::-moz-selection{
     color: #000;
-    background: #339b54;
+    background: #39b54a;
 }
 
 ::selection{
     color: rgb(0, 0, 0);
-    background: #339b54;
+    background: #39b54a;
 
 }
+
+.sticky {
+    padding: 15px 12px;
+    background: black;
+    margin-top: 0rem;
+    
+}
+
+
+
+.homeContent_scroll{
+    position: absolute;
+    right: 9.5rem;
+    bottom: 8.4rem;
+}
+
+.homeContent_scroll a::before {
+    border-bottom: 2px solid #39b54a;
+    border-right: 2px solid #39b54a;
+    content: '';
+    display: block;
+    height: 8px;
+    width: 8px;
+    margin-top: -6px;
+    pointer-events: none;
+    position: absolute;
+    left: 0;
+    top: 50%;    
+    margin-left: 1rem;
+    -webkit-transform-origin: 66% 66%;
+    -ms-transform-origin: 66% 66%;
+    transform-origin: 66% 66%;
+    -webkit-transform: rotate(
+45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(
+45deg);
+    -webkit-transition: all 0.15s ease-in-out;
+    transition: all 0.15s ease-in-out;
+}
+
+.homeContent_scroll a{
+    font-family: monospace;
+    font-size: 1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: .3rem;
+    color: #FFFFFF;
+    position: relative;
+    display: inline-block;
+    line-height: 3rem;
+    padding-left: 2.5rem;
+    z-index: 111111;
+}
+
+.homeContent_line{
+    display: block;
+    width: 2px;
+    height: 10.2rem;
+    background-color: #39b54a;
+    position: absolute;
+    right: 8.5rem;
+    bottom: 0;
+}
+
+
+.about_line{
+    display: block;
+    width: 2px;
+    height: 10.2rem;
+    background-color: #0000;
+    border: 1px solid black;
+    position: absolute;
+    right: 4.49rem;
+    top: -160px;
+    z-index: 1111;
+}
+.contact_line{
+    display: block;
+    width: 2px;
+    height: 10.2rem;
+    background-color:  #39b54a;
+    border: 1px solid #39b54a;
+    position: absolute;
+    right: 48.49rem;
+    top: -89px;
+    z-index: 1111;
+}
+
+.homeContent_scroll span{
+    font-size: 15px;
+    letter-spacing: 3px;
+    font-weight: 700;
+}
+
+@media(max-width:1550px){
+
+    .homeContent_line, .contact_line, .about_line ,.homeContent_scroll{
+        display: none;
+    }
+}
+
+
 .home-container{
     background: rgb(133, 133, 133) url(avez-bg.webp);
     background-size: cover;
@@ -41,8 +144,7 @@ html{
     top:23px;
     right:12px;
     width:60px;
-    height:60px;
-    background: transparent;
+    height:34px;
     cursor: pointer;
     display: flex;
     justify-content: center;
@@ -51,7 +153,7 @@ html{
 }
 
 .menu h4{
-    color: #339b54;
+    color: #39b54a;
     margin-right: 117px;
     font-weight: 700;
     letter-spacing: 2px;
@@ -98,7 +200,7 @@ html{
     width: 280px;
     height: 100%;
     background: rgb(18 20 22);
-    z-index: 1;
+    z-index: 2;
 }
 #sidebar.active{
     right: 0px;
@@ -114,7 +216,7 @@ html{
     padding: 10px 40px;
 }
 #sidebar ul li a:hover{
-    color: #339b54;
+    color: #39b54a;
 }
 
 #sidebar ul li a{
@@ -180,11 +282,11 @@ html{
 }
 
 .home-social .fa:hover{
-    color: #339b54;
+    color: #39b54a;
 
 }
 .soc-span{
-    color: #339b54;
+    color: #39b54a;
     right: 4.5rem;
     font-size: 1.3rem;
     /* opacity: 0;
@@ -252,12 +354,14 @@ html{
     letter-spacing: 2px;
     font-weight: 700;
     border: 2px solid #fff;
-    color: white;
+    color: white;    
+    margin-left: 0;
     background: transparent;
 }
+
 .buttons1 .btn:hover{
-    background: #339b54;
-    border: 2px solid #339b54;
+    background: #39b54a;
+    border: 2px solid #39b54a;
     
 }
 .buttons1 #btn1{
@@ -285,13 +389,15 @@ html{
     background: transparent;
 }
 .buttons .btn:hover{
-    background: #339b54;
-    border: 2px solid #339b54;
+    background: #39b54a;
+    border: 2px solid #39b54a;
     
 }
 .buttons #btn1{
     margin-right: 10px;
+    margin-left: 0;
 }
+
 
 
 @media(max-width:1010px){
@@ -332,7 +438,7 @@ html{
         font-size: 1.5rem;
     }
     .main-home-content{
-        transform: translateY(5rem) 
+        transform: translateY(9rem) 
     }
 }
 @media(max-width:300px){
@@ -391,6 +497,7 @@ html{
     justify-content: center;
     align-items: center;
     text-align: center;
+    color: #39b54a;
 
 
 }
@@ -491,74 +598,126 @@ html{
 
 
 
-/* Projects Section  */
+/* Work Section  */
 
-
-.projectBox ul{
-    display: flex;
-    flex-wrap: wrap;
-    margin: 2rem;
-    justify-content: space-evenly;
-    align-items: center;
+.Sworks{
+    background: #ffffff;
+    min-height: 100%;
+    position: relative;
+    max-width: 120rem;
+    margin: auto;
+    width: 92%;
 }
-.projectBox ul li{
-        border: 2px solid #000;
-        width: 20rem;
-        height: 25rem;
-        list-style: none;
-        margin: 2rem;
-        padding: 2rem;
 
-    }
-    
-.head h3{
+.workContainer{
+    padding: 15rem 0 25.2rem;
+    background: #111111;
+}
+
+.workContainer h2{
+    margin-top: -4rem;
+    text-transform: uppercase;
+    font-size: 2rem;
+    letter-spacing: 3px;
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    margin-top: 1rem;
-} 
+    color: #39b54a;
 
-.image img{
+
+}
+
+.p1{
+    display: block;
+    text-align: center;
+    color: #555;
+    font-size: 1.5rem;
+    font-weight: 500;
+    max-width: 65rem;
+    margin: auto;
+    line-height: 1.6;
+}
+
+.project img{
     width: 100%;
     height: 100%;
+    transition: 0.5s;
+}
+
+.projectSection{
+    display: flex;
+    justify-content: center;
+    margin-top: -20rem;
+    margin-bottom: 7vw;
+    margin-right: 15vw;
+    margin-left: 15vw;
+    flex-wrap: wrap-reverse;
+}
+
+.project{
+    flex: 50%;
+    overflow: hidden;
+    transition: 0.5s;
+    position: relative;
+}
+
+.caption{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #39b54a;
+    margin: 25px;
+    border: 1px solid #fff;
+    height: 90%;
+    width: 80%;
+    opacity: 0;
+    transition: 0.5s;
+}
+.caption h1{
+    color: #39b54a;
+}
+
+.project:hover img{
+    transform: scale(1.4);
+}
+
+.project:hover .caption{
+    opacity: 1;
+}
+
+
+@media(max-width:960px){
+    .project{
+        flex: 50%;
+    }
+
+}
+@media(max-width:768px){
+    .project{
+        flex: 100%;
+    }
+
+}
+@media(max-width:480px){
+    .project{
+        flex: 100%;
+    }
+
+    .caption{
+        width: 85%;
+    }
 
 }
 
-.Pcontent{
-    text-align: center;
-    margin-top: 1rem;
-}
-
-button{
-    padding-top: 0.4rem;
-    padding-bottom: 0.4rem;
-    padding-left: 0.8rem;
-    padding-right: 0.8rem;
-    text-align: center;
-    margin-top: 1rem;
-    margin-left: 4.5rem;
-    text-transform: uppercase;
-}
 
 
+/* Work Section  */
 
-@media only screen and (max-width:1476px) {
-  
-}
-@media only screen and (max-width:1521px) {
-
-}
-@media only screen and (max-width:411px){
-
-}
-@media only screen and (max-width:382px){
-  
-}
-@media only screen and (max-width:305px){
-    
-}
-@media only screen and (max-width:295px){
- 
- 
-}
 
 
 
@@ -604,38 +763,120 @@ button{
 /* Contact Section  */
 
 
-
-.contact-container{
-    text-transform: uppercase;
-    font-size: 2rem;
-    letter-spacing: 3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-.contact-container h2{
-
-    text-transform: uppercase;
-    font-size: 2rem;
-    letter-spacing: 3px;
-    margin-bottom: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: #339b54;
-
-
-}
-.contact-s{
-    background: #000000 ;
-    transform: translateY(9rem);
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 100vh;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    height: 100%;
+    opacity: 0.8;
+    background-color: #151515;
 }
-.contact-p1{
+
+
+.contact
+{
+    position: relative;
+    min-height: 100vh;
+    padding: 50px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: url(contact.PNG);
+    background-size: cover;
+}
+.content
+{
+    color: white;
+    text-align: center;
+    padding-top: 5px,5px,5px,5px;
+    margin-top: 5px,5px,5px,5px;
+    z-index: 1;
+}
+.contact .content h2
+{
+    font-size: 36px;
+    color: #39b54a;
+}
+
+
+/* ------------------------------------------------------------------------------------------------------------------------------------- */
+
+/* FORM  */
+
+.container
+{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.container .contactInfo
+{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.container .contactInfo .box
+{
+    position: relative;
+    padding: 20px 0;
+    display: flex;
+   
+}
+
+.container .contactInfo .box .icon
+{
+    min-width: 50px;
+    height: 50px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 22px;
+}
+
+.container .contactInfo .box .text
+{
+    display: flex;
+    margin-left: 20px;
+    font-size: 16px;
+    color: #fff;
+    flex-direction: column;
+    font-weight: 300;
+}
+
+.container .contactInfo .box .text h3
+{
+    font-weight: 500;
+    color: #fff;
+
+}
+
+/* ------------------------------------------------------------------------------------ */
+
+.contactForm
+{
+    width: 40%;
+    padding: 40px;
+    background: rgb(30 30 30);
+    z-index: 1;
+    box-shadow: 5px 4px 24px #000;
+}
+
+.contactForm h2
+{
+    font-size: 30px;
+    color: #fff;
+    font-weight: 500;
+}
+.content p
+{
     display: block;
     text-align: center;
     color: #555;
@@ -644,101 +885,128 @@ button{
     max-width: 65rem;
     margin: auto;
     line-height: 1.6;
-    margin-bottom: 2rem;
-
-}
-.primary-contact-control{
-    min-height: 100%;
-    max-width: 120rem;
-    margin: auto;
-    width: 92%;
-    z-index: 111111;
-    transform: translateY(5rem);
-
 }
 
 
-.contact-form{
-    max-width: 600px;
-    margin: auto;
-    padding: 0, 10px;
-}
-.contact-form-text{
-    display: block;
-    width: 100%;
-    box-sizing: border-box;
-    margin: 16px 0;
-    border: 2px solid #339b54;
-    border-radius: 29px;
-    background: #000000;
-    padding: 20px 40px;
-    outline: none;
-    color: #ffff;
-}
-
-.contact-form-text:hover{
-    box-shadow:0px 0px 2px 0px rgb(41, 41, 41);
-
-}
-
-textarea.contact-form-text{
-    resize: none;
-    height: 120px;
-}
-
-.contact-form-btn{
-    float: right;
-    border: 2px solid #339b54;
-    background: #0000;
-    color: #339b54;
-    padding: 12px 50px;
-    border-radius: 20px;
-    cursor: pointer;
-    transition: 0.5s;
-    text-transform: uppercase;
-    font-size: 1rem;
-    letter-spacing: 5px;
-}
-
-.contact-form-btn:hover{
-    color: #fff;
-    background-color: #339b54;
-}
-
-
-
-.footer-section{
-    transform: translateY(9rem);
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    min-height: 100%;
-    flex-direction: column;
+.contactForm .inputBox
+{
     position: relative;
-
+    width: 100%;
+    margin-top: 10px;
 }
+
+.contactForm .inputBox input,
+.contactForm .inputBox textarea
+{
+    width: 100%;
+    padding: 22px 0;
+    font-size: 16px;
+    margin: 0px 0;
+    border: none;
+    border-bottom: 2px solid #fff;
+    outline: none;
+    resize: none;
+    background: rgb(30 30 30)
+}
+
+.contactForm .inputBox span
+{
+    position: absolute;
+    left: 0; 
+    padding: 22px 0;
+    font-size: 16px;
+    margin: 0px 0;
+    pointer-events: none;
+    transition: 0.2s;
+    color: #666;
+}
+
+.contactForm .inputBox input:focus ~ span, /* zooms in on click */
+.contactForm .inputBox input:valid ~ span,
+.contactForm .inputBox textarea:focus ~ span,
+.contactForm .inputBox textarea:valid ~ span
+{
+    color: #e91e63;
+    font-size: 12px;
+    transform: translateY(-20px); /* comes up */
+}
+
+
+.contactForm .inputBox input[type="submit"]
+{
+    width: 96px;
+    height: 46px;
+    padding-bottom: 2rem;
+    padding-top: 0.7rem;
+    background: rgb(30 30 30);
+    color: #fff;
+    border: 2px solid #5555;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 1rem;    
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.contactForm .inputBox input[type="submit"]:hover{
+    background: #fff;    
+    font-weight: 600;
+    color: #000;
+    border: 2px solid #eee;
+}
+
+
+
+@media(max-width:991px)
+{
+    .contact{
+        padding: 14px;
+    }
+    .container{
+        flex-direction: column;
+    }
+    .container .contactInfo{
+          width: 100%;
+          padding: 2px 2px 22px 2px;
+    }
+    .container .contactInfo,
+    .contactForm{
+        width:100%;
+    }
+}
+
+
+
+
+
+
+
+/* Contact Section  */
+
+
+
+
+/* Footer Section  */
+
+
 
 footer{
     position: relative;
     width: 100%;
     height: auto;
     padding: 50px 100px ;
-    background: #339b54;
+    background: #111;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap; 
-    font-weight: 600;
-}
-
-.fullfoot{
 }
 
 footer .f-container{
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
 }
 
 footer .f-container .sec{
@@ -750,9 +1018,8 @@ footer .f-container .sec.aboutus {
 }
 
 footer .f-container  h2{
-    position: fixed;
-
-    color: #000;
+    position: relative;
+    color: #fff;
     font-weight: 500;
     margin-bottom: 15px;
 }
@@ -764,17 +1031,12 @@ footer .f-container h2:before{
     left: 0;
     width: 50px;
     height: 2px;
-    background: #ffff;
+    background: #39b54a;
 
-}
-
-.aboutContent{
-    padding-top: 3rem;
 }
 
 footer p{
-    color: #000;
-    padding-top: 0.1rem;
+    color: #999;
 }
 
 .sci{
@@ -800,7 +1062,7 @@ footer p{
 }
 
 .sci li a:hover{
-    background: #339b54;
+    background: #39b54a;
 
 }
 
@@ -814,16 +1076,12 @@ footer p{
     width: 25%;
 }
 
-.quicklinks ul{
-   padding-top: 3rem;
-}
-
 .quicklinks ul li{
     list-style: none; 
 }
 
 .quicklinks ul li a{
-    color: #000;
+    color: #999;
     text-decoration: none;
     margin-bottom: 10px;
     display: inline-block;
@@ -833,48 +1091,45 @@ footer p{
     color: #fff;
 }
 
-.contact{
+.footcontact{
     width: calc(35% - 60px);
     margin-right: 0 !important;
 }
-.contact .info{
-     margin-left:-11px;
-     padding-top: 3rem;
+.footcontact .info{
+     position: relative;
 }
-.contact .info li{
+.footcontact .info li{
     display: flex;
     margin-bottom: 16px;
 }
 
-.contact .info li span:nth-child(1){
-    color: #000;
+.footcontact .info li span:nth-child(1){
+    color: #fff;
     font-size: 20px;
     margin-right: 10px;
 }
 
+.footcontact .info li span{
+    color: #999;
+}
 
-
-.contact .info li a{
+.footcontact .info li a{
     
-    color: #0000;
+    color: #999;
     text-decoration: none;
 }
 
-.contact .info li a:hover{
-    color: #000;
+.footcontact .info li a:hover{
+    color: #fff;
 }
 
 .copyrightText{
     width: 100%;
-    background: #339b54;
+    background: #181818;
     display: block;
     padding:8px 100px  ;
     text-align: center;
     color:#999 ;
-}
-
-.copy{
-    padding-top: 2rem;
 }
 
 @media(max-width:991px){
@@ -890,10 +1145,21 @@ footer p{
     }
     footer .f-container .sec.aboutus,
     .quicklinks,
-    .contact{
+    .footcontact{
         width: 100%;
     }
     .copyrightText{
         padding: 8px 40px;
     }
 }
+
+
+
+
+
+
+/* Footer Section  */
+
+
+
+
