--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;500&display=swap');
+
 *{
     margin:0;
     padding: 0;
     box-sizing: border-box;
     transition: 0.5s ease;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Poppins', sans-serif;
+
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
     
 }
 html{
@@ -141,7 +145,7 @@ html{
 
 #toggle{
     position: fixed;
-    top:23px;
+    top:37px;
     right:12px;
     width:60px;
     height:34px;
@@ -149,7 +153,7 @@ html{
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1111;
+    z-index: 11111111;
 }
 
 .menu h4{
@@ -200,7 +204,7 @@ html{
     width: 280px;
     height: 100%;
     background: rgb(18 20 22);
-    z-index: 2;
+    z-index:1111111;
 }
 #sidebar.active{
     right: 0px;
@@ -506,7 +510,7 @@ html{
     display: block;
     text-align: center;
     color: #555;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 500;
     max-width: 65rem;
     margin: auto;
@@ -545,7 +549,7 @@ html{
 
 @media only screen and (max-width: 511px){
     .about-container .p1{
-        font-size: 1.2rem;
+        font-size: 1.5rem;
     }
     .content_details h3{
         font-size:1.8rem ;
@@ -556,7 +560,7 @@ html{
 } 
 @media only screen and (max-width: 381px){
     .about-container .p1{
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
     .content_details h3{
         font-size:1.5rem ;
@@ -633,7 +637,7 @@ html{
     display: block;
     text-align: center;
     color: #555;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 500;
     max-width: 65rem;
     margin: auto;
@@ -730,7 +734,7 @@ html{
 
 @media only screen and (max-width: 511px){
     .about-container .p1{
-        font-size: 1.2rem;
+        font-size: 1.5rem;
     }
     .content_details h3{
         font-size:1.8rem ;
@@ -741,7 +745,7 @@ html{
 } 
 @media only screen and (max-width: 381px){
     .about-container .p1{
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
     .content_details h3{
         font-size:1.5rem ;
@@ -790,8 +794,7 @@ html{
 {
     color: white;
     text-align: center;
-    padding-top: 5px,5px,5px,5px;
-    margin-top: 5px,5px,5px,5px;
+    margin-top: 6rem;
     z-index: 1;
 }
 .contact .content h2
@@ -857,6 +860,12 @@ html{
     color: #fff;
 
 }
+.container .contactInfo .box .text p
+{
+    font-weight: 500;
+    color: #fff;
+
+}
 
 /* ------------------------------------------------------------------------------------ */
 
@@ -867,6 +876,7 @@ html{
     background: rgb(30 30 30);
     z-index: 1;
     box-shadow: 5px 4px 24px #000;
+    margin-bottom: 4rem;
 }
 
 .contactForm h2
@@ -904,6 +914,7 @@ html{
     margin: 0px 0;
     border: none;
     border-bottom: 2px solid #fff;
+    color: #39b54a;
     outline: none;
     resize: none;
     background: rgb(30 30 30)
@@ -1007,6 +1018,7 @@ footer .f-container{
     justify-content: space-between;
     flex-wrap: wrap;
     flex-direction: row;
+    margin-top: 3rem;
 }
 
 footer .f-container .sec{
@@ -1070,6 +1082,10 @@ footer p{
     color: #fff;
     font-size: 20px;
 }
+.contact .fa{
+    color: #000;
+    font-size: 20px;
+}
 
 .quicklinks{
     position: relative;
@@ -1125,7 +1141,7 @@ footer p{
 
 .copyrightText{
     width: 100%;
-    background: #181818;
+    background: #111;
     display: block;
     padding:8px 100px  ;
     text-align: center;
