--- a/style.css
+++ b/style.css
@@ -11,6 +11,77 @@
     
 }
 
+.loading{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    color: #ffff;
+    z-index: 999999;
+}
+
+.loader{
+    width: 5rem;
+    position: absolute;
+    height: 5rem;
+    background-color: black;
+
+
+}
+.prelogo{
+    width: 5rem;
+    height: 5rem;
+    position: relative;
+    border-right: 0.3rem solid #39b54a;
+    border-radius: 50%;
+    animation: load 2s linear infinite;
+}
+
+.loader h1{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.loading h4{
+    position: absolute;
+    margin-top: 12rem;
+    text-align: center;
+    animation: 3s linear .1s loadh2;
+    transition: 0.3s ease-in-out;
+}
+
+@keyframes load{
+    0%{
+        transform: rotate(0deg);
+    
+}
+100%{
+        transform: rotate(360deg);
+    }
+}
+@keyframes loadh2{
+    0%{
+        color: #fff;
+    }
+
+100%{
+        color: #39b54a;
+    }
+}
+
+.prelogo{
+    display: grid;
+    place-items: center;
+    background-color: black;
+
+}
+
+
+
 body{
     background: #7475791a;
 }
@@ -154,7 +225,7 @@ html{
     width:60px;
     height:34px;
     cursor: pointer;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     z-index: 11111111;
